@@ -55,15 +55,11 @@ HB_INIT_SYMBOLS_END( delim1__InitSymbols )
       #pragma data_seg( "XIY" )
    #endif
    #pragma warning( disable: 4152 )
-   static void *hb_vm_auto_delim1__InitSymbols = &delim1__InitSymbols;
+   static void * hb_vm_auto_delim1__InitSymbols = &delim1__InitSymbols;
    #pragma warning( default: 4152 )
    #pragma data_seg()
-
-#else
-
-   #if ! defined(__GNUC__)
-      #pragma startup delim1__InitSymbols
-   #endif
+#elif ! defined(__GNUC__)
+   #pragma startup delim1__InitSymbols
 #endif
 
 static RDDFUNCS delimSuper = { 0 };
